[gd_scene load_steps=7 format=3 uid="uid://dn7oqjnwknkvm"]

[ext_resource type="Script" path="res://objects/wife/wife.gd" id="1_nubjm"]
[ext_resource type="PackedScene" uid="uid://bn3h7sg1re7ds" path="res://models/package/package.tscn" id="2_ehktk"]
[ext_resource type="PackedScene" uid="uid://dg2uy0k8qwvy3" path="res://models/wife/wife.tscn" id="2_g8t72"]
[ext_resource type="PackedScene" uid="uid://bljwaavm8wuyu" path="res://models/trash/trash.tscn" id="3_80nde"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7f3we"]
height = 1.7

[sub_resource type="BoxShape3D" id="BoxShape3D_xw2d1"]
size = Vector3(0.5, 0.5, 0.5)

[node name="Wife" type="CharacterBody3D"]
script = ExtResource("1_nubjm")

[node name="MeshStand" parent="." instance=ExtResource("2_g8t72")]
transform = Transform3D(-1.14961e-08, 0, -0.263, 0, 0.263, 0, 0.263, 0, -1.14961e-08, 0, 0, 0)

[node name="MeshSit" parent="." instance=ExtResource("2_g8t72")]
transform = Transform3D(-1.14961e-08, 0, -0.263, 0, 0.263, 0, 0.263, 0, -1.14961e-08, 0, -0.341999, 0)
visible = false

[node name="MeshGoods" parent="." instance=ExtResource("2_ehktk")]
transform = Transform3D(0.321586, 0, 0, 0, 0.321586, 0, 0, 0, 0.321586, 0, 0.75, -0.5)

[node name="MeshGargabe" parent="." instance=ExtResource("3_80nde")]
transform = Transform3D(0.320865, 0, 0, 0, 0.320865, 0, 0, 0, 0.320865, 0, 0.75, -0.5)
visible = false

[node name="CollisionWife" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85, 0)
shape = SubResource("CapsuleShape3D_7f3we")

[node name="CollisionGarbage" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -0.5)
shape = SubResource("BoxShape3D_xw2d1")
